# robotics-project

assignment/DONGGEON/: No1.md  No3.md  No4.md  No5.md  No6.md  No7.md  No7.py  No8.md  No9.md
assignment/SUNGMO/과정1/과제1/: 1_definition.md
assignment/SUNGMO/과정1/과제3/: 3_wheel.md
assignment/SUNGMO/과정1/과제8/: 8_microcontroller.md
assignment/SUNGMO/과정2/과제1/: 1_hello.py  1_linux.md
assignment/SUNGMO/과정2/과제2/: 2_ros.md
assignment/SUNGMO/과정2/과제3/: 3_node.md
assignment/SUNGMO/과제1/: 1_definition.md  description.md
assignment/SUNGMO/과제1/ros2_ws/src/line_follower_agv/: README.md  package.xml  setup.cfg  setup.py
assignment/SUNGMO/과제1/ros2_ws/src/line_follower_agv/launch/: line_follower.launch.py
assignment/SUNGMO/과제1/ros2_ws/src/line_follower_agv/line_follower_agv/: controller_node.py  data_logger_node.py  mqtt_bridge_node.py  sensor_node.py
assignment/SUNGMO/과제2/: 2_mortor.md  description.md
assignment/SUNGMO/과제3/: description.md
assignment/SUNGMO/과제4/: 4_sensor.md  description.md
assignment/SUNGMO/과제5/: 5_encoder.md  description.md
assignment/SUNGMO/과제6/: 6_differential_drive.md  description.md
assignment/SUNGMO/과제7/: 7_control.md  description.md
assignment/SUNGMO/과제8/: description.md
assignment/SUNGMO/과제9/: 9_control_practice.md  description.md
assignment/YUNJI/과제1/: 1_definition.md
